--- a/src/pages/Main/Main.astro
+++ b/src/pages/Main/Main.astro
@@ -72,22 +72,35 @@ import InvisibleButton from '../../components/InvisibleButton/InvisibleButton';
 
             <!-- Btm Btns -->
             <div class="btm__btns">
-                <button type="button" class="btn__triangle__left">
+                <!-- <button type="button" class="btn__triangle__left">
                     <div class="triangle_left"></div>
+                </button> -->
+                <button type="button" class="btn__triangle__left">
+                    <div class="btn__white--bg">
+                        <div class="triangle_left"></div>
+                    </div>
                 </button>
                 <button type="button" class="btn__triangle__right">
-                    <div class="triangle_right"></div>
+                    <div class="btn__white--bg">
+                        <div class="triangle_right"></div>
+                    </div>
                 </button>
                 <button type="button">
-                    <div class="btn__minus"></div>
+                    <div class="btn__white--bg">
+                        <div class="btn__minus"></div>
+                    </div>
                 </button>
                 <button type="button" class="pressband__speed"></button>
                 <button type="button">
-                    <div class="btn__plus"></div>
+                    <div class="btn__white--bg">
+                        <div class="btn__plus"></div>
+                    </div>
                 </button>
                 <button type="button" class="btn__fastforward">
-                    <div class="triangle_right"></div>
-                    <div class="triangle_right"></div>
+                    <div class="btn__white--bg">
+                        <div class="triangle_right"></div>
+                        <div class="triangle_right"></div>
+                    </div>
                 </button>
                 <button type="button" class="pressband__run--btn ui__changable"
                     >RUN</button
