--- a/src/components/Button/LamButton.astro
+++ b/src/components/Button/LamButton.astro
@@ -20,12 +20,15 @@ const { text } = Astro.props;
 
 <style>
     .laminating__work--btn {
+        font-family: inherit;
+        font-weight: bold;
         width: 100%;
-        max-width: 20vw;
+        max-width: 125px;
         height: 100%;
-        min-height: 10vh;
+        min-height: 125px;
         padding: 1em 0.5em;
         text-align: center;
+        text-transform: uppercase;
     }
     .button--selected {
         background: #060501f0;
