--- a/src/layouts/Layout.css
+++ b/src/layouts/Layout.css
@@ -56,7 +56,11 @@ body {
 .main__screen--slot {
     width: 100%;
     height: 100%;
-    max-height: 542px;
+    min-height: 542px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
   /* === Misc === */
