--- a/src/layouts/MenuLayout.css
+++ b/src/layouts/MenuLayout.css
@@ -1,6 +1,7 @@
 .menu__layout--container {
     width: 100%;
     height: 100%;
+    max-height: 542px;
     background: var(--cl-main);
     border: 10px outset var(--cl-main-hover);
     color: #131313;
