--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,3 +1,8 @@
+.main__screen--body {
+    width: 100%;
+    height: 100%;
+}
+
 /* ======= Main Top ======= */
 .main__screen--top {
     width: 80%;
@@ -98,18 +103,24 @@
 .top__btns .speed__controlers > button {
     padding: 1em 1em;
 }
-.btn__minus {
+.top__btns .btn__minus {
     width: 36px;
     height: 7px;
     background: #1e1e1e;
 }
-.btn__plus {
+.top__btns .btn__plus {
     width: 42px;
     height: 9px;
     background: #1e1e1e;
     position: relative;
     display: grid;
     place-items: center;
+}
+.top__btns .speed__controlers .btn__white--bg .btn__minus {
+    transform: scale(0.75);
+}
+.top__btns .speed__controlers .btn__white--bg .btn__plus {
+    transform: scale(0.75);
 }
 .btn__plus:after {
     content: '';
@@ -208,7 +219,7 @@
     padding: 1.25em 0.25em;
 }
 
-.btm__btns button .btn__white--bg {
+button .btn__white--bg {
     background: rgba(255, 235, 119, 0.6);
     box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.45);
 }
@@ -261,9 +272,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-}
-.btm__btns .btn__fastforward .btn__white--bg:last-child {
-    padding-right: -1em;
 }
 .btm__btns .counter--indicator {
     width: 25.5%;
