--- a/src/layouts/Layout.css
+++ b/src/layouts/Layout.css
@@ -59,7 +59,7 @@ body {
     min-height: 542px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 }
 
