--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -15,6 +15,7 @@
     position: relative;
     z-index: 100;
 }
+
 .main__screen--top .btn__group {
     display: flex;
     flex-direction: row;
@@ -24,12 +25,13 @@
     margin: 0;
     padding: 0;
 }
+
 .main__screen--top .speed__indicator {
     font-size: 2.5rem;
     margin: 0;
     padding: 0;
 }
-  
+
 /* ======= Main Middle ======= */
 .main__screen--middle {
     width: 100%;
@@ -41,12 +43,14 @@
     z-index: 0;
     position: relative;
 }
-.main__screen--middle > img {
+
+.main__screen--middle>img {
     width: 100%;
     max-height: 355px;
     object-fit: contain;
     object-position: center;
 }
+
 /* === Main Middle Invisible Buttons === */
 .main__screen--middle .laminating__work--btn {
     width: 125px;
@@ -56,6 +60,7 @@
     top: 250px;
     z-index: 100;
 }
+
 .main__screen--middle .carrier__sheet__feeder--btn {
     width: 125px;
     height: 65px;
@@ -64,6 +69,7 @@
     top: 235px;
     z-index: 100;
 }
+
 .main__screen--middle .settings--btn {
     width: 100px;
     height: 65px;
@@ -72,6 +78,7 @@
     top: 130px;
     z-index: 100;
 }
+
 .main__screen--middle .sheet__feeder--btn {
     width: 200px;
     height: 250px;
@@ -80,56 +87,57 @@
     top: 70px;
     z-index: 100;
 }
-  
-  
+
+
 /* ======= Main Bottom ======= */
 .main__screen--bottom {
     width: 100%;
     height: 100%;
     z-index: 100;
 }
+
 .top__btns {
     width: 100%;
     display: flex;
 }
+
 .top__btns button {
     width: max-content;
     flex: 1;
 }
+
 .top__btns .speed__controlers {
     display: flex;
     flex: 1;
 }
-.top__btns .speed__controlers > button {
+
+.top__btns .speed__controlers>button {
     padding: 1em 1em;
 }
+
 .top__btns .btn__minus {
-    width: 36px;
+    width: 33px;
     height: 7px;
     background: #1e1e1e;
 }
+
 .top__btns .btn__plus {
-    width: 42px;
-    height: 9px;
+    width:36px;
+    height: 8px;
     background: #1e1e1e;
     position: relative;
     display: grid;
     place-items: center;
 }
-.top__btns .speed__controlers .btn__white--bg .btn__minus {
-    transform: scale(0.75);
-}
-.top__btns .speed__controlers .btn__white--bg .btn__plus {
-    transform: scale(0.75);
-}
 .btn__plus:after {
     content: '';
     position: absolute;
-    width: 45px;
-    height: 10px;
+    width: 36px;
+    height: 8px;
     background: #1e1e1e;
     transform: rotate(90deg);
 }
+
 .speed__controlers--indicator {
     width: 100%;
     display: flex;
@@ -142,7 +150,8 @@
     border-right: 4px solid #1e1e1e63;
     border-bottom: 4px solid #1414146d;
 }
-.speed__controlers--indicator > p {
+
+.speed__controlers--indicator>p {
     text-align: right;
     width: 100%;
     font-size: 1rem;
@@ -155,7 +164,8 @@
     padding: 0.125em 1em;
     border-bottom: 4px solid #1c1c1c66;
 }
-.speed__controlers--indicator > input {
+
+.speed__controlers--indicator>input {
     box-sizing: border-box;
     padding: 3px 5px;
     text-align: right;
@@ -167,12 +177,13 @@
     margin: 0.1em 0.3em;
     letter-spacing: 2px;
 }
-.speed__controlers--indicator > input::placeholder {
+
+.speed__controlers--indicator>input::placeholder {
     color: var(--cl-main);
     opacity: 0.8;
     letter-spacing: 2px;
 }
-  
+
 /* Mid Buttons */
 .mid__btns {
     width: 100%;
@@ -180,20 +191,23 @@
     display: flex;
     background-color: #f0e8af;
 }
-.mid__btns > button {
+
+.mid__btns>button {
     display: flex;
     justify-content: center;
     font-family: inherit;
     text-align: center;
     padding: 0.15em;
 }
+
 .mid__btns--lft {
     width: 74.5%;
 }
+
 .mid__btns--cntr {
     width: 25.5%;
 }
-  
+
 /* Btm Buttons */
 .btm__btns {
     width: 100%;
@@ -205,7 +219,8 @@
     align-items: center;
     justify-content: flex-start;
 }
-.btm__btns > button {
+
+.btm__btns>button {
     width: fit-content;
     height: 15px;
     padding: 1.25em 0.2em;
@@ -213,32 +228,14 @@
     align-items: center;
     justify-content: center;
 }
-.btm__btns .btn__triangle__left,
-.btm__btns .btn__triangle__right {
-    width: auto;
-    padding: 1.25em 0.25em;
-}
-
-button .btn__white--bg {
-    background: rgba(255, 235, 119, 0.6);
-    box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.45);
-}
-.btm__btns button .btn__white--bg .triangle_left {
-    transform: scale(0.65);
-}
-.btm__btns button .btn__white--bg .triangle_right {
-    transform: scale(0.65);
-}
 
 .btm__btns button .btn__minus {
-    width: 37px;
+    width: 32px;
     height: 7px;
     background: #1e1e1e;
     margin: 1em 0.1em;
 }
-.btm__btns .btn__white--bg .btn__minus {
-    transform: scale(0.75);
-}
+
 .btm__btns .btn__plus {
     width: 37px;
     height: 10px;
@@ -248,9 +245,11 @@ button .btn__white--bg {
     place-items: center;
     margin: 1em 0.1em;
 }
-.btm__btns .btn__white--bg .btn__plus {
+
+.btm__btns .btn__plus {
     transform: scale(0.75);
 }
+
 .btm__btns .btn__plus:after {
     content: '';
     position: absolute;
@@ -259,6 +258,7 @@ button .btn__white--bg {
     background: #1e1e1e;
     transform: rotate(90deg);
 }
+
 .btm__btns .pressband__speed {
     width: 100%;
     display: flex;
@@ -267,12 +267,7 @@ button .btn__white--bg {
     flex: 1;
     padding: 1.25em 0.45em;
 }
-.btm__btns .btn__fastforward .btn__white--bg {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
+
 .btm__btns .counter--indicator {
     width: 25.5%;
     display: flex;
@@ -285,7 +280,8 @@ button .btn__white--bg {
     border-bottom: 6px solid #1414146d;
     box-shadow: 0px 0px 15px hsl(51, 90%, 15%);
 }
-.btm__btns .counter--indicator > input {
+
+.btm__btns .counter--indicator>input {
     box-sizing: border-box;
     text-align: right;
     font-family: inherit;
@@ -297,7 +293,8 @@ button .btn__white--bg {
     letter-spacing: 2px;
     padding-right: 0.5em;
 }
-.btm__btns .counter--indicator > input::placeholder {
+
+.btm__btns .counter--indicator>input::placeholder {
     color: var(--cl-main);
     opacity: 0.8;
     letter-spacing: 2px;
